# Brockian-Ultra-Cricket-panel

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
docs/: architecture.md  build-and-release.md  page3-scenes-and-direct-control.md
main/: CMakeLists.txt  app_lvgl_lock.h  demo_data.c  hw_init.h  hw_touch.h  net_wifi.c  net_wifi.h  panel_api.c  panel_api.h  secrets.example.h  ui_clock.h  ui_compass.c  ui_controls.c  ui_indoor.c  ui_indoor.h  ui_pages.c  ui_pages.h  ui_theme.h  ui_weather.c  ui_weather.h  ui_wind_strip.c  ui_wind_strip.h
targets/waveshare-4.3-esp32s3/: .gitignore  CMakeLists.txt  README.md  increment_build.py  partitions.csv
targets/waveshare-4.3-esp32s3/docs/: architecture.md  build-and-release.md  page3-scenes-and-direct-control.md
targets/waveshare-4.3-esp32s3/main/: CMakeLists.txt  buc_display.h  demo_data.h  hw_init.c  hw_touch.c  idf_component.yml  main.c  panel_api.c  secrets.example.h  ui_clock.c  ui_compass.c  ui_compass.h  ui_controls.h  ui_indoor.c  ui_indoor.h  ui_pages.h  ui_theme.c  ui_weather.c  ui_weather.h
targets/waveshare-7b-esp32s3-showcase/: CMakeLists.txt  README.md  partitions_16mb.csv  sdkconfig.defaults
targets/waveshare-7b-esp32s3-showcase/main/: CMakeLists.txt  clock_ui.c  clock_ui.h  config.example.h  control_post.c  control_post.h  control_ui.c  control_ui.h  display.c  display.h  idf_component.yml  indoor_ui.c  indoor_ui.h  lv_conf.h  lv_mem_psram.c  lv_mem_psram.h  main.c  outlook_ui.c  outlook_ui.h  panel_alert.c  panel_alert.h  touch.c  touch.h  weather_col.c  weather_col.h
